# pipelines-dbt

./: .gitignore  pyproject.toml
dags/: dbt.py  dbt.yml
dbt/: dbt_project.yml
dbt/dbt_packages/dbt_utils/integration_tests/data/schema_tests/: data_test_at_least_one.csv
dbt/models/dimensions/: dim_orders.sql  dim_orders.yml  dim_products.sql  dim_products.yml
dbt/models/facts/: fact_order_lines.sql  fact_order_lines.yml
dbt/sources/: amazon.yml  amazon_sale_report.sql
examples/data/: amazon_sale_report.csv
